[package]
name = "iroh_sdht"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh-blake3 = "1.4"
rand = "0.8"
iroh = "0.13"
iroh-mdns = "0.13"
hex = "0.4"
futures = "0.3"
quinn = "0.10"
