[package]
name = "iroh_sdht"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
iroh-blake3 = "1.4"
rand = "0.8"
iroh = { version = "0.95.1", features = ["discovery-local-network"] }
hex = "0.4"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
irpc = "0.11"
irpc-iroh = "0.11"
tracing = "0.1"
lru = "0.12"
